fix: overflow view

--- a/src/pages/UserList/userList.css
+++ b/src/pages/UserList/userList.css
@@ -1,10 +1,12 @@
 .content-list {
   width: 100%;
-  min-height: calc(100vh - var(--header-height));
+  max-width: 1380px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: calc(100vh - var(--header-height));
+  overflow-y: auto;
   display: flex;
   justify-content: center;
-  margin-top: 1.5rem;
-  background-color: #f5f5f5;
 }
 .user-list {
   width: 80%;
@@ -13,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 2rem 1rem;
 }
 .list-title {
   width: 100%;
@@ -21,9 +24,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
-}
-tbody {
-  width: 100vh;
 }
 .btn-add {
   color: var(--color-primary);
